Fix event date alignment on screens md or smaller

--- a/src/components/Event/index.module.scss
+++ b/src/components/Event/index.module.scss
@@ -29,6 +29,9 @@
   font-size: 1rem;
   font-weight: 400;
   color: $text-unfocused;
+  @include down($breakpoint-md) {
+    text-align: center;
+  }
 }
 
 .description {
